fix: Update README to state JDK 17 as minimum (+ update version of library listed) (#9)
## **Associated JIRA tasks**

.

## **What the code does.**

fix: Update README to state JDK 17 as minimum 
+ update version of library listed

## **Does this code change break backwards compatibility?.**

No